# KnishIO-CLI

./: .gitignore  Cargo.toml  README.md  knishio.toml
src/: backup.rs  bench.rs  cell.rs  config.rs  docker.rs  embed.rs  health.rs  init.rs  main.rs  output.rs  paths.rs  update.rs
src/bench/: execute.rs  generate.rs  mod.rs  plot.rs
